# vastatrix

./: .gitignore  .vimspector.json  Cargo.toml  LICENSE  Makefile  build.sh  builddjar.sh  rustfmt.toml
src/: #main2.rs#  frame.rs  lib.rs  main.rs  vastatrick.rs  vastatrick.rs~  vastatrix.rs
src/class/: attribute.rs  classfile.rs  classpath.rs  classpath.rs~  definition.rs  descriptor.rs  frame.rs  instance.rs  method.rs  mod.rs  variable.rs
src/jar/: meta.rs  meta.rs~  mod.rs
src/loading/: mod.rs
testy/: Math.java
testy/com/vastatrix/tests/: Main.java  Math.java  MoreMath.java
testy/java/lang/: Object.java
vtx-jbridge/: Cargo.toml
vtx-jbridge/src/: lib.rs
vtx-std/: Cargo.toml
vtx-std/src/: array.rs  class.rs  exception.rs  illegalstateexception.rs  integer.rs  lib.rs  method.rs  object.rs  path.rs  runtimeexception.rs  string.rs  system.rs  throwable.rs
