[package]
name = "vastatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broom = "0.3.2"
bytes = "1.4.0"
nom = "7.1.3"
zip = "0.6.4"

[dependencies.clap]
version = "4.1.6"
features = [ "derive" ]
