[package]
name = "vastatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broom = "0.3.2"
bytes = "1.4.0"
chrono = "0.4.23"
dyn-clone = "1.0.10"
fern = { version = "0.6.1", features = ["colored", "chrono"]}
libloading = "0.7.4"
log = "0.4.17"
nom = "7.1.3"
zip = "0.6.4"

[dependencies.clap]
version = "4.1.6"
features = [ "derive" ]
