[package]
name = "vtx-std"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
broom = "0.3.2"
syn = "2.0.11"

[dependencies.vtx-jbridge]
path = "../vtx-jbridge"

[dependencies.vastatrix]
path = "../"
